--- a/WEBSITE/Website.css
+++ b/WEBSITE/Website.css
@@ -122,3 +122,43 @@
      font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: lighter;
 }
+
+ #secondpage{
+    width: 100%;
+    height: 100vh;
+    background-image: url(../image/pexels-veeterzy-114979\ \(1\).jpg);
+    background-size:100%;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-size: 25px;
+    color: white;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+   
+}
+
+ #secondpage h1{
+    text-align: center;
+     font-weight:bold;
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
+} 
+
+
+#secondpage h1 div button{
+    background-color: #dc8fbe;
+    border-radius: 20px;
+    border-color: whitesmoke;
+    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    padding: 10px 20px;
+    margin-top: 20px;
+    
+}
+
+#secondpage h1 div button:hover{
+            background: #c676a4;
+        }
+
+#secondpage h1 h6  {
+     font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-weight: lighter;
+}
