--- a/WEBSITE/contactstyle.css
+++ b/WEBSITE/contactstyle.css
@@ -35,20 +35,24 @@
         }
 
         .card{
-           background-image: url(../image/pexels-veeterzy-114979\ \(1\).jpg);
+           /* background-image: url(../image/pexels-veeterzy-114979\ \(1\).jpg); */
+           background-color: white;
             width: 250px;
             padding: 25px;
+             border: solid black;
             border-radius: 10px;
             box-shadow: 0 5px 15px rgba(0,0,0,0.1);
         }
 
         .card h3{
             margin-bottom: 10px;
+           
+            /* background-color: aqua; */
             
         }
 
         .card p{
-        
+            /* background-color: #c676a4; */
             font-size: 15px;
         }
 
@@ -58,8 +62,9 @@
         }
 
         .cta button{
+             border: solid black;
             background: #dc8fbe;
-            border: none;
+            /* border: none; */
             padding: 15px 30px;
             font-size: 18px;
             border-radius: 30px;
