--- a/WEBSITE/Website.css
+++ b/WEBSITE/Website.css
@@ -87,7 +87,7 @@
     width: 100%;
     height: 100vh;
     background-image: url(../image/pexels-veeterzy-114979\ \(1\).jpg);
-    background-size:100%;
+    background-size:1000%;
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 25px;
     color: white;
@@ -119,46 +119,135 @@
         }
 
 #firstpage h1 h6  {
+    /* margin-top: 100px; */
      font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-weight: lighter;
 }
 
- #secondpage{
-    width: 100%;
+/* start the second page  */
+
+/* #secondpage{ */
+
+    /* width: 100%;
     height: 100vh;
+    display: flex;
+    justify-content: center;
+    gap: 30px;
     background-image: url(../image/pexels-veeterzy-114979\ \(1\).jpg);
-    background-size:100%;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-size: 25px;
-    color: white;
+    flex-wrap: wrap;
+    align-items: center; */
+    
+    /* display: flex;
+    grid-template-columns: auto auto auto;
+    justify-content: center;
+    align-items: center;
+    gap: 10px; */
+    
+     
+
+     /* display: grid;
+     gap: 10px;
+     grid-template-columns: repeat(6,400px);
+     overflow: scroll;
+     scrollbar-width: none; */
+/* } */
+
+.container {
     display: flex;
     justify-content: center;
     align-items: center;
-   
-}
-
- #secondpage h1{
-    text-align: center;
-     font-weight:bold;
-     font-family: Verdana, Geneva, Tahoma, sans-serif;
-} 
-
-
-#secondpage h1 div button{
-    background-color: #dc8fbe;
-    border-radius: 20px;
-    border-color: whitesmoke;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
-    padding: 10px 20px;
-    margin-top: 20px;
+    gap: 30px;
+    padding: 50px;
+    background-image: url(../image/pexels-veeterzy-114979\ \(1\).jpg);
+  background-size: 1000%;
+  
     
 }
 
-#secondpage h1 div button:hover{
-            background: #c676a4;
-        }
-
-#secondpage h1 h6  {
-     font-family: Verdana, Geneva, Tahoma, sans-serif;
-    font-weight: lighter;
+.card1 {
+    width: 260px;
+    background: white;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    text-align: center;
 }
+
+.card1 img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.card2 {
+    width: 260px;
+    background: white;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    text-align: center;
+}
+
+.card2 img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.card3 {
+    width: 260px;
+    background: white;
+    border-radius: 15px;
+    overflow: hidden;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.2);
+    text-align: center;
+}
+
+.card3 img {
+    width: 100%;
+    height: 250px;
+    object-fit: cover;
+}
+
+.content {
+    padding: 20px;
+}
+
+.classmode {
+    font-size: 12px;
+    color: gray;
+}
+
+.footer {
+    display: flex;
+    justify-content: space-around;
+    color: white;
+    padding: 15px 0;
+}
+
+.footer div h3 {
+    margin: 0;
+}
+
+.footer div p {
+    margin: 0;
+    font-size: 12px;
+}
+
+.pink {
+    background: linear-gradient(to right, #08d3b1, #2bffed);
+}
+
+.orange {
+    background: linear-gradient(to right, #ff7e5f, #feb47b);
+}
+
+.green {
+    background: linear-gradient(to right, #11998e, #38ef7d);
+}
+
+
+
+
+
+
