--- a/New folder/Website.css
+++ b/New folder/Website.css
@@ -22,6 +22,10 @@ max-width:100%;
  align-items: center;
  position: relative;
  padding:0 20px;
+ position: fixed;
+ top: 0%;
+ right: 0%;
+ ;
  }
 
 
