--- a/New folder/Website.css
+++ b/New folder/Website.css
@@ -20,12 +20,12 @@ max-width:100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
- position: relative;
+ /* position: relative;
  padding:0 20px;
  position: fixed;
  top: 0%;
- right: 0%;
- ;
+ right: 0%; */
+ 
  }
 
 
